[gd_scene load_steps=16 format=2]

[ext_resource path="res://baixados__5_-removebg-preview.png" type="Texture" id=1]
[ext_resource path="res://86b97cd6439184fd6acf19845270d2ca.jpg" type="Texture" id=2]
[ext_resource path="res://images__2_-removebg-preview.png" type="Texture" id=3]
[ext_resource path="res://Introdução.gd" type="Script" id=4]
[ext_resource path="res://baixados-removebg-preview.png" type="Texture" id=5]
[ext_resource path="res://images-_3_.png" type="Texture" id=6]
[ext_resource path="res://PTSansNarrow-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://arrow_right_icon_133719.png" type="Texture" id=8]
[ext_resource path="res://transition.tscn" type="PackedScene" id=9]
[ext_resource path="res://pixel-art-scene-secret-laboratory_150088-23.jpg" type="Texture" id=10]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 848, -31 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.695322, 0.563846 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../TextureRect:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "explosion"
length = 10.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 7.9, 9.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.695322, 0.563846 ), Vector2( 9.77676, 8.68789 ), Vector2( 15.6293, 13.2181 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.8, 1.6, 2.3, 2.8, 3.40323, 7.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 468, 301 ), Vector2( 468, 301 ), Vector2( 468, 301 ), Vector2( 468, 301 ), Vector2( 468, 301 ), Vector2( 468, 301 ), Vector2( 510, -5 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../TextureRect:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 3.3, 6.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.529412, 0, 0, 1 ), Color( 0.00784314, 0, 0, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 8.7, 10 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.926093 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.0392157 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "impact"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 848, -31 ), Vector2( 468, 301 ) ]
}

[sub_resource type="DynamicFont" id=4]
size = 26
outline_size = 1
extra_spacing_top = 7
extra_spacing_bottom = 5
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=5]
size = 26
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer"]
root_node = NodePath("../Sprite")
anims/RESET = SubResource( 1 )
anims/explosion = SubResource( 3 )
anims/impact = SubResource( 2 )

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
margin_right = 626.0
margin_bottom = 289.0
rect_scale = Vector2( 1.66214, 2.10897 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="CanvasLayer"]
position = Vector2( 848, -31 )
scale = Vector2( 0.695322, 0.563846 )
texture = ExtResource( 1 )

[node name="explosion" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer2"]
margin_right = 2000.0
margin_bottom = 1125.0
rect_scale = Vector2( 0.511508, 0.523975 )
texture = ExtResource( 10 )

[node name="Sprite" type="Sprite" parent="CanvasLayer2"]
position = Vector2( 194, 368 )
scale = Vector2( 1.65741, 1.56974 )
texture = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="CanvasLayer2/Sprite"]
position = Vector2( 1.20342, -32.7022 )
scale = Vector2( 0.268479, 0.319656 )
texture = ExtResource( 6 )

[node name="ColorRect" type="ColorRect" parent="CanvasLayer2"]
margin_left = 7.0
margin_top = 420.0
margin_right = 1031.0
margin_bottom = 596.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer2/ColorRect"]
margin_left = 2.0
margin_top = 2.0
margin_right = 1029.0
margin_bottom = 326.0

[node name="Label" type="Label" parent="CanvasLayer2/ColorRect/VBoxContainer"]
margin_right = 1027.0
margin_bottom = 47.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "   ???"

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer2/ColorRect/VBoxContainer/Label"]
margin_left = 19.0
margin_top = 49.0
margin_right = 953.0
margin_bottom = 176.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 5 )
text = "testeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee"

[node name="TextureButton" type="TextureButton" parent="CanvasLayer2/ColorRect"]
margin_left = 926.0
margin_top = 94.0
margin_right = 1438.0
margin_bottom = 606.0
rect_scale = Vector2( 0.164988, 0.154829 )
texture_normal = ExtResource( 8 )

[node name="dialogo" type="Timer" parent="."]
one_shot = true

[node name="impacto" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="transição" type="Timer" parent="."]
one_shot = true

[node name="transition" parent="." instance=ExtResource( 9 )]
visible = false

[node name="dialogo_2" type="Timer" parent="."]
wait_time = 12.0

[node name="transition_2" type="Timer" parent="."]
wait_time = 12.0
one_shot = true

[node name="changescene" type="Timer" parent="."]
wait_time = 2.0

[connection signal="timeout" from="explosion" to="." method="_on_explosion_timeout"]
[connection signal="pressed" from="CanvasLayer2/ColorRect/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="timeout" from="dialogo" to="." method="_on_dialogo_timeout"]
[connection signal="timeout" from="impacto" to="." method="_on_impacto_timeout"]
[connection signal="timeout" from="transição" to="transition" method="_on_transio_timeout"]
[connection signal="timeout" from="dialogo_2" to="." method="_on_dialogo_2_timeout"]
[connection signal="timeout" from="transition_2" to="transition" method="_on_transition_2_timeout"]
[connection signal="timeout" from="changescene" to="." method="_on_changescene_timeout"]
